# stm32-power-scope

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: arm-none-eabi-toolchain.cmake
deploy/systemd/: powerscope-daemon.service
docs/: architecture.md  ctl_cli.md  daemon.md  firmware-debug.md  legacy_cli.md  linux-workflows.md  protocol.md  testing.md  usb_cdc_setup.md
drivers/: CMakeLists.txt  defs.h
drivers/ina219/: driver.c  driver.h
drivers/tests/: test_sensor_ina219.c
firmware/: .cproject  .project  CMakeLists.txt  stm32-power-scope-fw.ioc
firmware/Core/Inc/: comm_uart.h  comm_usb_cdc.h  stm32l4xx_it.h
firmware/Core/Src/: board_stm32l4.c  comm_uart.c  comm_usb_cdc.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
firmware/USB_DEVICE/App/: usbd_cdc_if.c
firmware/app/: board.h  board_stm32l4.c  byteio.h  comm_usb_cdc.c  comm_usb_cdc.h  ina219.c  ina219.h  protocol.c  protocol_defs.h  ps_app.c  ps_app.h  ps_assert.h  ps_config.h  ps_core.c  ps_crc16.h  ps_sanity.c  ring_buffer.h
firmware/sim/: CMakeLists.txt  board_sim.c  board_sim_config.h  board_sim_i2c.h  comm_tcp.c  comm_tcp.h  main.c  ps_app.c
firmware/sim/sensors/: registry.c
firmware/sim/sensors/ina219/: adapter.c  adapter.h  config.h  fake.c  fake.h  sample.h
firmware/stm32l432_nucleo/: .cproject  .mxproject  .project  CMakeLists.txt  stm32-power-scope-fw.ioc
firmware/stm32l432_nucleo/Core/Inc/: comm_uart.h  comm_usb_cdc.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
firmware/stm32l432_nucleo/Core/Inc/sensors/ina219/: adapter.h  config.h  sample.h
firmware/stm32l432_nucleo/Core/Src/: board_stm32l4.c  comm_uart.c  main.c  ps_app.c  ps_sanity_hw.c  stm32l4xx_it.c
firmware/stm32l432_nucleo/Core/Src/sensors/: registry.c
firmware/stm32l432_nucleo/Core/Src/sensors/ina219/: adapter.c
firmware/stm32l432_nucleo/USB_DEVICE/App/: usbd_cdc_if.h
firmware/stm32l432_nucleo/cmake/: stm32l432_openocd.cmake  stm32l432_target_setup.cmake  stm32l432_toolchain.cmake
firmware/stm32l432_nucleo/cube/: .cproject
firmware/stm32l432_nucleo/cube/Core/Src/: stm32l4xx_hal_msp.c
firmware/stm32l432_nucleo/cube/uart/: CMakeLists.txt
firmware/stm32l432_nucleo/cube/uart/include/: main.h  stm32l4xx_it.h
firmware/stm32l432_nucleo/cube/uart/include/sensors/ina219/: sample.h
firmware/stm32l432_nucleo/cube/uart/src/: board_stm32l4.c  main.c  ps_app.c  ps_sanity_hw.c
firmware/stm32l432_nucleo/cube/usb_cdc/: CMakeLists.txt
firmware/stm32l432_nucleo/cube/usb_cdc/USB_DEVICE/App/: usbd_cdc_if.c
firmware/stm32l432_nucleo/cube/usb_cdc/include/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
firmware/stm32l432_nucleo/cube/usb_cdc/src/: board_stm32l4.c  comm_usb_cdc.c  main.c  ps_app.c
firmware/stm32l432_nucleo/cube/usb_cdc/src/sensors/: registry.c
host/: requirements.txt
host/app/: config.py  controller.py  runner.py  session_index.py  sinks.py  transport_index.py
host/cli/: __main__.py  args.py  commands.py  main.py  shell.py
host/clients/: __init__.py  period_presets.py  sdk.py
host/clients/ctl/: args.py  commands.py  main.py
host/common/: _csv_writer.py  _file_lock.py  control.py  logging.py  logging_config.py  protocol.py  serial_link.py  session.py  telemetry.py
host/core/: context.py  errors.py  session_identity.py  session_store.py
host/core/recording/: async_writer.py  command.py  history.py  stream.py
host/daemon/: __init__.py  api.py  main.py  manager.py
host/interfaces/: __init__.py  command_sink.py  reading_sink.py
host/metadata/: sensors.yml  transports.yml
host/metadata/protocol/: commands.yml  constants.yml  errors.yml  frames.yml  header.yml  payloads.yml
host/model/: __init__.py  channel.py  codec.py  compute.py  loader.py  sensor.py  transport.py
host/protocol/: __init__.py  engine.py  errors.py  loader.py  mcu_client.py
host/protocol/_internal/: pending_command.py  rx_worker.py
host/protocol/core/: __init__.py  crc.py  decoder.py  defs.py  header.py  parser.py  types.py  utils.py
host/runtime/: device_link.py  device_session.py  state.py
host/tests/: conftest.py
host/tests/app/: test_runner.py
host/tests/core/: test_session_store.py
host/tests/daemon/: test_api.py  test_manager.py
host/tests/model/: test_channel.py  test_codec.py  test_compute.py  test_loader.py  test_sensor.py
host/tests/protocol/: test_command.py  test_crc16.py  test_decoder.py  test_defs.py  test_engine.py  test_frame.py  test_header.py  test_loader.py  test_mcu_client.py  test_parser.py  (+4 more)
host/transport/: base.py  errors.py  factory.py  params.py  registry.py  tcp.py  uart.py  usb.py
host/utils/: hashing.py
powerscope/: CMakeLists.txt
powerscope/include/: board.h  byteio.h  ina219.h  protocol_defs.h  ps_app.h  ps_assert.h  ps_buffer_if.h  ps_cmd_defs.h  ps_cmd_dispatcher.h  ps_cmd_handlers.h  ps_cmd_parsers.h  ps_compiler.h  ps_config.h  ps_core.h  ps_crc16.h  ps_errors.h  ps_payload.h  ps_sensor_adapter.h  ps_sensor_config.h  ps_sensor_mgr.h  ps_transport_adapter.h  ps_tx.h  ring_buffer.h  ring_buffer_adapter.h
powerscope/include/protocol/: commands.h  constants.h  errors.h  framing.h  header.h  responses.h
powerscope/include/sensor/: adapter.h  defs.h  manager.h  registry.h
powerscope/include/sensor/ina219/: adapter.h  config.h  driver.h
powerscope/src/: framing.c  ina219.c  protocol.c  ps_app.c  ps_cmd_dispatcher.c  ps_cmd_handlers.c  ps_cmd_parsers.c  ps_core.c  ps_payload.c  ps_sanity.c  ps_sensor_adapter.c  ps_sensor_mgr.c  ps_tx.c  ring_buffer.c  ring_buffer_adapter.c
powerscope/src/sensor/: manager.c  registry.c
powerscope/src/sensor/ina219/: adapter.c  driver.c
powerscope/tests/: test_byteio.c  test_cmd_dispatcher.c  test_cmd_parsers.c  test_crc16.c  test_framing.c  test_ina219.c  test_protocol.c  test_ps_core.c  test_ps_sensor_mgr.c  test_ps_tx.c  test_ring_buffer.c  test_ring_buffer_adapter.c  test_sensor_ina219.c  test_sensor_manager.c
scripts/: build-fw.ps1  env.ps1  install-tools.ps1  run-demo.ps1  run-sim.ps1
scripts/linux/: install-daemon.sh  run-daemon.sh
(+8 files in other folders)
